# auraloid

./: .gitignore  LICENSE  README.md
docs/: auraseq_spec.md  auravoice_spec.md  neural_model_spec.md  onnx_runtime.md  roadmap.md
engine/: CMakeLists.txt  phoneme_timing.h
engine/cli/: auraloid_cli.cpp
engine/core/: engine.h
engine/core/audio/: audio_buffer.cpp  audio_buffer.h  flac_decoder.cpp  flac_decoder.h
engine/core/neural/: feature_extractor.cpp  feature_extractor.h  neural_onnx.cpp  neural_onnx.h  neural_runtime.h
engine/core/seq/: auraseq.cpp  auraseq.h  auraseq_loader.cpp  auraseq_loader.h  auraseq_reader.cpp  auraseq_reader.h
engine/core/synth/: mixer.cpp  mixer.h  phoneme_crossfade.cpp  phoneme_crossfade.h  phoneme_timing.cpp  pitch_engine.cpp  pitch_engine.h  renderer.h  synth_renderer.cpp  synth_renderer.h  timing_engine.cpp  timing_engine.h
engine/core/voice/: IVoice.h  auravoice_loader.cpp  auravoice_loader.h  auravoice_reader.cpp  auravoice_reader.h  auravoice_structs.h  hybrid_voice.h  loaded_voice.cpp  loaded_voice.h  neural_voice.cpp  neural_voice.h  pitch_curve.cpp  pitch_curve.h  sample_voice.h  voice_base.h
engine/core/voice/blocks/: expression_block.cpp  expression_block.h  model_block.cpp  model_block.h  phoneme_block.cpp  phoneme_block.h  sample_block.cpp  sample_block.h  voice_info.cpp  voice_info.h
engine/io/audio/: wav_writer.cpp  wav_writer.h
examples/projects/: hello_world.auraseq
examples/projects/demo_v1/: demo_metashi.auravoice  main.cpp
examples/voices/: demo_metashi.auravoice
formats/auravoice/: README.md
tools/: auraloid_render.cpp
tools/seq_validator/: validate_seq.py
tools/voice_packer/: pack_voice.py
